syntax = "proto3";

package tensorflow;

opt on go_package = "g hub.com/tensorflow/tensorflow/tensorflow/go/core/protobuf/for_core_protos_go_proto";

// Coord nat on serv ce conf gurat on para ters.
// T  system p cks appropr ate values for f elds that are not set.
 ssage Coord nat onServ ceConf g {
  // Type of coord nat on serv ce  mple ntat on to enable.
  // For example, sett ng t  serv ce type as "standalone" starts a serv ce
  //  nstance on t  leader task to prov de t  coord nat on serv ces such as
  //  artbeats and cons stent key-value store.
  str ng serv ce_type = 1;

  // Address w re t  coord nat on serv ce  nstance  s hosted.
  str ng serv ce_leader = 2;

  // W t r to enable t   alth c ck  chan sm.
  bool enable_ alth_c ck = 3;

  // Max mum wa  t   for all  mbers  n t  cluster to be reg stered.
   nt64 cluster_reg ster_t  out_ n_ms = 4;

  //  artbeat t  out,  f a worker does not record  artbeat  n t  t  
  // w ndow,   w ll be cons dered d sconnected.
   nt64  artbeat_t  out_ n_ms = 5;

  // T  l st of jobs that part pate  n t  coord nat on serv ce.  f empty, all
  // jobs w ll be  ncluded  n t  coord nat on serv ce by default.
  repeated str ng coord nated_jobs = 6;
}
