syntax = "proto3";

package tensorflow.serv ng;
opt on cc_enable_arenas = true;

 mport "tensorflow_serv ng/conf g/log_collector_conf g.proto";

 ssage Sampl ngConf g {
  // Requests w ll be logged un formly at random w h t  probab l y. Val d
  // range: [0, 1.0].
  double sampl ng_rate = 1;
}

// Conf gurat on for logg ng query/responses.
 ssage Logg ngConf g {
  LogCollectorConf g log_collector_conf g = 1;
  Sampl ngConf g sampl ng_conf g = 2;
}
